<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="3dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:alpha="0.8"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/cardBackgroundColor"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/firstGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/secondGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.65" />

            <TextView
                android:id="@+id/timeStamp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:fontFamily="@font/manrope_medium"
                android:gravity="bottom|center"
                android:maxLines="1"
                android:textColor="@color/textColor"
                app:autoSizeMaxTextSize="80sp"
                app:autoSizeMinTextSize="50sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toTopOf="@+id/secondGuideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/firstGuideline"
                app:layout_constraintVertical_bias="1.0" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:gravity="center|top"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/secondGuideline"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/dateStamp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:fontFamily="@font/manrope_medium"
                    android:gravity="center|top"
                    android:textColor="@color/clockSubtextColor"
                    android:textSize="20sp"
                    app:autoSizeMaxTextSize="20sp"
                    app:autoSizeMinTextSize="2sp"
                    app:autoSizeTextType="uniform" />

                <ImageView
                    android:id="@+id/alarmImage"
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start|top|end"
                    android:layout_marginStart="5dp"
                    android:layout_weight="0"
                    android:contentDescription="@string/alarmImageContentDescription"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_alarm" />

                <TextView
                    android:id="@+id/alarmStamp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:layout_weight="0"
                    android:fontFamily="@font/manrope_medium"
                    android:gravity="center|top"
                    android:textColor="@color/clockSubtextColor"
                    android:textSize="20sp"
                    android:visibility="gone"
                    app:autoSizeMaxTextSize="20sp"
                    app:autoSizeMinTextSize="2sp"
                    app:autoSizeTextType="uniform" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

