...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/navigationLauncherControllerContainerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
            android:layout_height="1dp"
            android:layout_marginTop="23dp"
            android:layout_marginBottom="0dp"
            android:background="@color/dividerColor" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/itemPickRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/itemPickRecyclerTopMargin"
            android:nestedScrollingEnabled="true"
            android:overScrollMode="never" />

...
